--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
       <div class="header">
         <h1>Astronomy Picture of the Day</h1>
         </div>
-
-    </div>
   </header>
 
     <main>
@@ -39,9 +37,14 @@
               </div>
 
             </div>
-        <footer>develorper by: Guilherme Carvalho</footer>
+
 
     </main>
+    <div class="rodape">
+        <footer>develorper by: Guilherme Carvalho</footer>
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="./index.js"></script>
 </body>
