mudança no html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inter:wght@400;700;800&family=Nosifer&family=Nunito:wght@400;600&family=Space+Mono:ital@1&family=Special+Elite&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inter:wght@400;700;
+        800&family=Nosifer&family=Nunito:wght@400;
+        00&family=Space+Mono:ital@1&family=Special+Elite&family=Zen+Kurenaido&display=swap"
+        rel="stylesheet">
+     <script src="https://code.jquery.com/jquery-3.6.0.js" defer></script>
+    <script src="./index.js" defer></script>
     <title>APOD</title>
 
 </head>
@@ -44,8 +49,5 @@
         <footer>develorper by: Guilherme Carvalho</footer>
     </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="./index.js"></script>
 </body>
 </html>
