--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
   </header>
 
+
     <main>
 
         <div class="info">
@@ -31,6 +32,12 @@
             <input id="input" type="date">
             <button id="btn">SELECIONAR</button>
         </div> 
+        <div id="gif">
+            <img src="img/giphy.gif" id='loader'/>
+            <img src="img/giphy.gif" id='loader'/>
+            <img src="img/giphy.gif" id='loader'/>
+        </div>
+
 
         <div class="corpo">
               <h1 id="titulo"></h1>
@@ -45,6 +52,7 @@
 
 
     </main>
+
     <div class="rodape">
         <footer>develorper by: Guilherme Carvalho</footer>
     </div>
