--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
             <button id="btn">SELECIONAR</button>
         </div> 
         <div id="gif">
-            <img src="img/giphy.gif" id='loader'/>
-            <img src="img/giphy.gif" id='loader'/>
-            <img src="img/giphy.gif" id='loader'/>
+            <img src="img/giphyg.gif" id='loader'/>
         </div>
 
 
